<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentGastos">


    <EditText
        android:id="@+id/txtCantidadGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/txtCantidadGasto"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDescriGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/txtDescriGastos"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCantidadGasto" />

    <Button
        android:id="@+id/btnGuardarGasto"
        android:layout_width="132dp"
        android:layout_height="113dp"
        android:layout_marginStart="254dp"
        android:layout_marginTop="32dp"
        android:text="@string/btnGuardarGasto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescriGastos" />
</androidx.constraintlayout.widget.ConstraintLayout>