<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LayoutbtnInicio"
        android:layout_width="match_parent"
        android:layout_height="51dp">

        <Button
            android:id="@+id/btnInicio"
            android:layout_width="288dp"
            android:layout_height="51dp"
            android:layout_marginStart="168dp"
            android:layout_marginEnd="155dp"
            android:text="@string/btnInicio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Layoutbotones"
        android:layout_width="match_parent"
        android:layout_height="69dp">

        <Button
            android:id="@+id/btnMovimiento"
            android:layout_width="141dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/btnMovimientos"
            app:layout_constraintStart_toEndOf="@+id/btnGastos"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnGastos"
            android:layout_width="101dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/bthGastos"
            app:layout_constraintStart_toEndOf="@+id/btnIngresar"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="101dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/btnIngresar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frameInicio"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>